rancher.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: rancher
  name: rancher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rancher
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: rancher
    spec:
      containers:
      - image: rancher/rancher:latest
        imagePullPolicy: Always
        name: rancher
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 30
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
status: {}
---
apiVersion: v1
kind: Service
metadata: 
  name: rancher
  labels:
    app: rancher
spec: 
  ports: 
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: rancher
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: rancher-ingress
#  annotations:
#    kubernetes.io/tls-acme: "true"
#    ingress.kubernetes.io/secure-backends: "true"
spec:
#  tls:
#    - hosts:
#      - rancher.localhost
 rules:
   - host: rancher.localhost
     http:
       paths:
         - path: /
           backend: 
             serviceName: rancher
             servicePort: 80
