step7.jenkin.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: jenkins
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: jenkins
    spec:
      containers:
      - image:  jenkinsci/blueocean
        imagePullPolicy: Always
        name: jenkins
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 30
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
status: {}
---
apiVersion: v1
kind: Service
metadata: 
  name: jenkins
  labels:
    app: jenkins
spec: 
  ports: 
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: jenkins
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: jenkins-ingress
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
   kubernetes.io/tls-acme: "true"
   ingress.kubernetes.io/secure-backends: "true"
 namespace: default
spec:
 tls:
   - hosts:
     - jenkins.myhost.k8s
 rules:
   - host: jenkins.myhost.k8s
     http: 
       paths:
         - path: /
           backend: 
             serviceName: jenkins
             servicePort: 80
